fix: more java 17 stuff